After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747690 - gstvalue: failure to deserialize bitmask
gstvalue: failure to deserialize bitmask
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Mac OS
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-04-11 11:37 UTC by Hyunjun Ko
Modified: 2015-04-13 10:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gstvalue: reset errno before g_ascii_strtoull call (891 bytes, patch)
2015-04-11 11:46 UTC, Hyunjun Ko
committed Details | Review

Description Hyunjun Ko 2015-04-11 11:37:10 UTC
When doing gstvalue TC, one failure happens as below.

97%: Checks: 35, Failures: 1, Errors: 0
gst/gstvalue.c:490:F:general:test_deserialize_bitmask:0: could not deserialize 0xffffffffffffffff (0)

This happens because errno already has meaningless value, but this is caught by error check logic after g_ascii_strtoull calls.

errno needs to be reset to zero.
Comment 1 Hyunjun Ko 2015-04-11 11:46:31 UTC
Created attachment 301358 [details] [review]
gstvalue: reset errno before g_ascii_strtoull call
Comment 2 Joe Gorse 2015-04-12 02:11:03 UTC
Comment on attachment 301358 [details] [review]
gstvalue: reset errno before g_ascii_strtoull call

I can confirm that this patch fixes the gstvalue test case on OS X 10.10.2 GStreamer master.
Comment 3 Vincent Penquerc'h 2015-04-13 10:45:46 UTC
Pushed, thanks.

commit e08c03ed07eddc22d2400a90705c422291863fba
Author: Hyunjun Ko <zzoon.ko@samsung.com>
Date:   Sat Apr 11 20:44:02 2015 +0900

    gstvalue: reset errno before g_ascii_strtoull call
    
    "errno" already has meaningless value before g_ascii_strtoull call.
    This causes invalid error check without reset.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=747690